--- a/ch_app/templates/camera.html
+++ b/ch_app/templates/camera.html
@@ -12,7 +12,7 @@
         {% else %}
                 <div class="sub-container-2columns">
 
-                        <!-- conteudo das cams aqui -->
+                        Em breve !
 
                 </div>
         {% endif %}
