--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -13,7 +13,9 @@
     {% if rgbs == 0 or not rgbs %}
         <h5>Nenhum terminal RGB cadastrado.</h5>
     {% else %}
-        <div class="sub-container-2columns"></div>
+        <div class="sub-container-2columns">
+            Em breve !
+        </div>
     {% endif %}
 
 {% endblock %}
