--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -14,7 +14,9 @@
         <h5>Nenhum terminal RGB cadastrado.</h5>
     {% else %}
         <div class="sub-container-2columns">
-            Em breve !
+            {% for rgb in rgbs %}
+                oi
+            {% endfor %}
         </div>
     {% endif %}
 
