--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -15,7 +15,7 @@
     {% else %}
         <div class="sub-container-2columns">
             {% for rgb in rgbs %}
-                {{ rgb.on }}
+                {{ rgb_state.on }}
             {% endfor %}
         </div>
     {% endif %}
