--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -16,7 +16,7 @@
         <div class="sub-container-2columns">
             {% for rgb in rgbs %}
             
-            {% for keyrgb, valuergb in rgb_state%}
+            {% for keyrgb, valuergb in rgb_power %}
                 {{valuergb}}
             {% endfor %}
 
