--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -17,7 +17,9 @@
             {% for rgb in rgbs %}
             
             {% for keyrgb, valuergb in rgb_power %}
+            {% if keyrgb == rgb.ip %}
                 {{valuergb}}
+            {% endif %}
             {% endfor %}
 
 
