--- a/ch_app/templates/rgb.html
+++ b/ch_app/templates/rgb.html
@@ -16,7 +16,7 @@
         <div class="sub-container-2columns">
             {% for rgb in rgbs %}
             
-            {rgb_power}
+            {{rgb_power}}
 
 
             {% endfor %}
