Corigido Bug RGB_temp vazio

--- a/ch_app/templates/dimmer.html
+++ b/ch_app/templates/dimmer.html
@@ -14,7 +14,7 @@
   {% if dimmers == 0 or not dimmers %}
     <h5>Nenhum dimmer cadastrado.</h5>
   {% else %}
-    <div class="sub-container-2columns">
+    <div id="sub-container-2columns" class="sub-container-2columns">
 
       {% for dimmer in dimmers %}
 
